# MarsImportedSample

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/mark/com/marsimportsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/mark/com/marsimportsample/: App.java  MainActivity.java  MarsServiceProfile.java  RiderMarsServiceProfile.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/mark/com/marsimportsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
stnservice/: build.gradle
stnservice/src/androidTest/java/mark/com/stnservice/: ExampleInstrumentedTest.java
stnservice/src/androidTest/java/xinguang/: ExampleInstrumentedTest.java
stnservice/src/main/: AndroidManifest.xml
stnservice/src/main/aidl/com/xinguang/: MarsService.aidl  TaskWrapper.aidl
stnservice/src/main/aidl/mark/com/stnservice/: MarsService.aidl  TaskWrapper.aidl
stnservice/src/main/java/com/xinguang/: MainServiceHandler.java  MainServiceNative.java  MainServiceProxy.java  MarsServiceStub.java  MyThrowable.java
stnservice/src/main/java/com/xinguang/msgprotocol/client/transfer/: MCProtocolPB.java
stnservice/src/main/java/com/xinguang/tubobo/msgprotocol/transfer/: CommandPB.java  NotifyTaskDispatchPB.java  NotifyTaskOperateResultPB.java  RequestTaskListPB.java  ResponsePB.java  ResponseTaskDetailPB.java  ResponseTaskListPB.java  ResultCodePB.java
stnservice/src/main/java/mark/com/stnservice/: DebugProfile.java  MainServiceImpl.java  MainServiceNativeImpl.java  MainServiceProxy.java  MarsServiceStub.java  MyThrowable.java  Profile.java  TextTaskWrapper.java
stnservice/src/main/proto/: Command.proto  Direction.proto  Geo.proto  MCProtocol.proto  MsgType.proto  NotifyTaskDispatch.proto  RequestTaskDetail.proto  RequestTaskList.proto  RequestTaskOperate.proto  Response.proto  ResponseTaskDetail.proto  ResponseTaskList.proto  ResponseTaskListItem.proto  ResponseTaskOperateResult.proto  ResultCode.proto  TaskOperateEnum.proto  UserType.proto
stnservice/src/main/res/values/: strings.xml
stnservice/src/test/java/mark/com/stnservice/: ExampleUnitTest.java
stnservice/src/test/java/xinguang/: ExampleUnitTest.java
